--- a/geoportal/templates/geoportal/about.html
+++ b/geoportal/templates/geoportal/about.html
@@ -1,10 +1,10 @@
 {% extends 'geoportal/base.html' %}
 {% block title %}Про портал{% endblock %}
 {% block content %}
-    <h1>Про геопортал</h1>
+    <h1>Про гео портал</h1>
     <div>
         Портал розроблено Сахарчук Марією в 2023 році. 
-        Геопортал містить сторінку з останніми статтями та публікаціями.
-        Також доступна сторінка з цікавими місцями та історичними пам'ятками, яку можна переглянути.
-    </div>po
+        Гео портал містить сторінку з останніми статтями та публікаціями. 
+        Також доступна сторінка з цікавими місцями та історичними пам'ятками яку можна переглянути.
+    </div>
 {% endblock %}
