--- a/geoportal/templates/geoportal/monument_detail.html
+++ b/geoportal/templates/geoportal/monument_detail.html
@@ -3,9 +3,10 @@
 
 {% block content %}
 <div class="monument-detail">
+    {% load static %}
 
     {% if object.image %}
-        <div class="hero-image" style="background-image: url('{{ object.image.url }}');"></div>
+        <div class="hero-image" style="background-image: url('{% static object.image.url %}');"></div>
     {% endif %}
 
     <div class="container mt-4">
