Add media changes

--- a/geoportal/templates/geoportal/articles_list.html
+++ b/geoportal/templates/geoportal/articles_list.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <div class="container my-4">
-    <h1 class="mb-4">Новини та цікаві статті</h1>
+    <h1 class="mb-4">Полтавська спадщина: відкриття історії крізь віки</h1>
     <div class="row">
         {% for article in object_list %}
         <div class="col-md-4 mb-3">
