--- a/geoportal/templates/geoportal/base.html
+++ b/geoportal/templates/geoportal/base.html
@@ -27,7 +27,7 @@
                     <li><a class="dropdown-item" href="{% url 'monuments_list' 'reservation'%}">Державні історико-культурні заповідники та музеї</a></li>
                   </ul>
                 </li>
-                <li class="nav-item"><a class="nav-link" href="{% url 'map' %}">Карта пам'яток</a></li>
+                <li class="nav-item"><a class="nav-link" href="{% url 'map' %}">Атлас пам'яток</a></li>
                 <li class="nav-item"><a class="nav-link" href="{% url 'about' %}">Про геопортал</a></li>
               </ul>
             </div>
